--- a/ByteCloud-Software/pom.xml
+++ b/ByteCloud-Software/pom.xml
@@ -97,39 +97,29 @@
                 </configuration>
             </plugin>
 
-            <!--<plugin>-->
-                <!--<groupId>com.google.code.maven-replacer-plugin</groupId>-->
-                <!--<artifactId>replacer</artifactId>-->
-                <!--<version>1.5.3</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>prepare-package</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>replace</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                <!--</executions>-->
-                <!--<configuration>-->
-                    <!--<file>${project.artifactId}/target/html/version.php</file>-->
-                    <!--<replacements>-->
-                        <!--<replacement>-->
-                            <!--<token>$version = "mvn:unknown";</token>-->
-                            <!--<value>$version = "${project.version}.${build.number}";</value>-->
-                        <!--</replacement>-->
-                    <!--</replacements>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.5.3</version>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <descriptors>
-                        <descriptor>crunchify.xml</descriptor>
-                    </descriptors>
-                    <tarLongFileMode>posix</tarLongFileMode>
+                    <file>${project.artifactId}/src/main/html/version.php</file>
+                    <replacements>
+                        <replacement>
+                            <token>$version = "mvn:unknown";</token>
+                            <value>$version = "${project.version}.${build.number}";</value>
+                        </replacement>
+                    </replacements>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
