--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ByteCloud-Common"]
 	path = ByteCloud-Common
-	url = gitea@kvm.bytelist.de:ByteList/ByteCloud-Common.git
+	url = git@github.com:ByteList/ByteCloud-Common.git
